@@ -1,3 +1,6 @@
+** v2.07, xx.xx.2016**
+* QuestTracker: Color the Quest by difficulty.
+
 ** v2.06, 30.07.2016**
 * Add a LocationPanel. All credits belong to Darth Predator (Shadow&Light).
 * Add a Achievement status in tooltip. Based on Enhanced Achievements.
