@@ -34,23 +34,55 @@ local function ObjectiveTrackerReskin()
 		ObjectiveTrackerBlocksFrame.QuestHeader.Text:SetFont(LSM:Fetch('font', 'Merathilis Roboto-Black'), 12, 'OUTLINE')
 		ObjectiveTrackerBlocksFrame.QuestHeader.Text:SetVertexColor(classColor.r, classColor.g, classColor.b)
 
+		-- Level Text for QuestTracker
 		hooksecurefunc(QUEST_TRACKER_MODULE, "Update", function(self)
 			for i = 1, GetNumQuestWatches() do
 				local questID, title, questLogIndex, numObjectives, requiredMoney, isComplete, startEvent, isAutoComplete, failureTime, timeElapsed, questType, isTask, isStory, isOnMap, hasLocalPOI = GetQuestWatchInfo(i)
-				if not questID then break end
+				if not questID then
+					break
+				end
 				local block = QUEST_TRACKER_MODULE:GetBlock(questID)
 				local oldBlock = QUEST_TRACKER_MODULE:GetExistingBlock(questID)
 				if oldBlock then
 					local newTitle = "[" .. select(2, GetQuestLogTitle(questLogIndex)) .. "] " .. title
 					QUEST_TRACKER_MODULE:SetStringText(oldBlock.HeaderText, newTitle, nil, OBJECTIVE_TRACKER_COLOR["Header"])
 				end
-
 				local heightcheck = block.HeaderText:GetNumLines()
-
 				if heightcheck == 2 then
 					local height = block:GetHeight()
 					block:SetHeight(height + 16)
 				end
+			end
+		end)
+
+		-- Level Color for QquestTracker
+		hooksecurefunc(QUEST_TRACKER_MODULE, "Update", function()
+			for i = 1, GetNumQuestWatches() do
+				local questID, _, questIndex = GetQuestWatchInfo(i)
+				if not questID then
+					break
+				end
+				local _, level = GetQuestLogTitle(questIndex)
+				local col = GetQuestDifficultyColor(level)
+				local block = QUEST_TRACKER_MODULE:GetExistingBlock(questID)
+				if block then
+					block.HeaderText:SetTextColor(col.r, col.g, col.b)
+					block.HeaderText.col = col
+				end
+			end
+		end)
+
+		hooksecurefunc("ObjectiveTrackerBlockHeader_OnLeave", function(self)
+			local block = self:GetParent()
+			if block.HeaderText.col then
+				block.HeaderText:SetTextColor(block.HeaderText.col.r, block.HeaderText.col.g, block.HeaderText.col.b)
+			end
+		end)
+
+		hooksecurefunc(DEFAULT_OBJECTIVE_TRACKER_MODULE, "AddObjective", function(self, block)
+			if block.module == ACHIEVEMENT_TRACKER_MODULE then
+				block.HeaderText:SetTextColor(0.75, 0.61, 0)
+				block.HeaderText.col = nil
 			end
 		end)
 
