@@ -1,3 +1,6 @@
+<b><u> v2.07, xx.xx.2016</b></u>
+<font color=#FF8C00>&#9830;</font> QuestTracker: Color the Quest by difficulty.
+
 <b><u> v2.06, 30.07.2016</b></u>
 <font color=#FF8C00>&#9830;</font> Add a LocationPanel. All credits belong to Darth Predator (Shadow&Light).
 <font color=#FF8C00>&#9830;</font> Add a Achievement status in tooltip. Based on Enhanced Achievements.
